# BitBlitzer_Chess_engine

./: .gitignore  AttackTableGenerator.cpp  AttackTableGenerator.h  AttackTables.cpp  AttackTables.h  BitBoard.cpp  BitBoard.h  CMakeLists.txt  CurrentPosition.cpp  CurrentPosition.h  FenParser.cpp  FenParser.h  GameState.cpp  GameState.h  Makefile  Move.cpp  Move.h  MoveGenerator.cpp  MoveGenerator.h  Perft.cpp  Perft.h  Piece.cpp  Piece.h  Position.h  README.md  SDL_functions.cpp  SDL_functions.h  Search.cpp  Search.h  attack_tables.cpp  attack_tables.h  backup_mate.txt  bit_manipulation.cpp  bit_manipulation.h  bitboards.cpp  bitboards.h  board_constants.cpp  board_constants.h  fen_parser.cpp  fen_parser.h  (+18 more)
Perft compare script/: perft.txt  perftCompare.py  stockfish.txt
src/: AttackTables.cpp  AttackTables.h  BitBoard.cpp  BitBoard.h  CMakeLists.txt  Eval_Tables.cpp  Eval_Tables.h  FenParser.cpp  MoveGenerator.cpp  MoveGenerator.h  Position.h  Search.cpp  Search.h  Socket_Handler.cpp  Socket_Handler.hpp  bit_manipulation.cpp  bit_manipulation.h  gameHandler.cpp  gameHandler.hpp  magics.h  main.cpp  move.h  old_main.cpp  perft.cpp  position.cpp
